# impact-stack-rest

./: .gitlab-ci.yml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
boilerplate_project/: __init__.py
impact_stack/requests/: __init__.py  auth.py  sessions.py
impact_stack/rest/: __init__.py  auth.py  rest.py
tests/: __init__.py  auth_test.py  client_factory_test.py  example_test.py  rest_test.py
