[project]
name = "impact-stack-requests"
version = "0.0.0"
dependencies = [
  "flask",
  "requests",
]

[project.optional-dependencies]
dev = [
  "black",
  "flask",
  "isort",
  "pre-commit",
  "pydocstyle[toml] >= 6",
  "pylint",
  "pytest",
  "pytest-cov",
  "requests-mock",
  "safety",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["impact_stack"]
namespaces = true

[tool.black]
line-length = 100

[tool.coverage.run]
source = ["impact_stack"]
relative_files = true

[tool.coverage.report]
fail_under = 98

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true

[tool.pydocstyle]
convention = "google"

[tool.pylint.basic]
good-names = ["db"]

[tool.pylint.format]
max-line-length = "100"

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term --cov-report=xml --junitxml=pytest-junit.xml"
python_classes = [
  "*Test",
  "Test*",
]
